welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:17: error: not found: value drotie
				drotie();
                                ^