welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	var PosF:Boolean=false
	while(!PosF){
		if(!estFaceMur){
			avance();
		}
		if(estFaceMur){
			gauche();
			if(getDirection() == Direction.EST && estFaceMur){
				gauche();
			}
			if(getDirection() == Direction.EST && !estFaceMur){
				avance();
			}
			if(getDirection() == Direction.OUEST && estFaceMur){
				drotie();
			}
			if(getDirection() == Direction.OUEST && !estFaceMur){
				avance();
			}
		}
	}
}
